--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,11 @@
 name: Test Dagger
 on:
   workflow_dispatch: {}
+  pull_request:
+    branches: ["master"]
   push:
-    branches:
-      - "master"
-    tags:
-      - v*
+    branches: ["master"]
+    tags: [v*]
 
 jobs:
   publish:
